Removed unnecessary comments

--- a/MathAndTheory/MLC_Week_1_Math.ipynb
+++ b/MathAndTheory/MLC_Week_1_Math.ipynb
@@ -20,7 +20,7 @@
       "version": "3.6.9"
     },
     "colab": {
-      "name": "MLC Math Week One Draft.ipynb",
+      "name": "Copy of MLCWeek1-Copy.ipynb",
       "provenance": [],
       "collapsed_sections": []
     }
@@ -78,7 +78,7 @@
         "\n",
         "&#150; Tom Mitch, 1998\n",
         "\n",
-        "For example playing a game of chess, E would be games played, T would be the task of playing chess and P could be winrate, probability of winning."
+        "For example playing a game of chess, E would be games played, T would be the task of playing chess and P could be winrate or probability of winning."
       ]
     },
     {
@@ -95,7 +95,7 @@
       "source": [
         "Image(\"Machine_Learning_vs_Classical.png\")"
       ],
-      "execution_count": 276,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
         "plt.plot(data_x, data_y, 'ro')\n",
         "plt.show()"
       ],
-      "execution_count": 277,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "plt.plot(data_x, data_y, \"bo\")\n",
         "plt.show()"
       ],
-      "execution_count": 278,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -433,7 +433,7 @@
         "%matplotlib inline\n",
         "\n",
         "\n",
-        "x = np.arange(-5,5,0.1)\n",
+        "x = np.arange(-5,5,0.1)Work with Github+Colab\n",
         "y = np.arange(-5,5,0.1)\n",
         "X,Y = np.meshgrid(x,y)\n",
         "Z = -X**2 +Y+2*X*(Y**3)+X**4+2*(X)*(Y)-Y**3\n",
@@ -449,7 +449,7 @@
         "ax.set_zlabel('Cost Function Values')\n",
         "plt.show()\n"
       ],
-      "execution_count": 280,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -489,19 +489,6 @@
         "\n",
         "Note that you update all the parameters at once then reassign the theta values.\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3AHWGUNlnrT8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -548,19 +535,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6iWbwTLAxbk9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "TmnqLtPbxcti",
@@ -581,6 +555,29 @@
         "\n",
         "Note: In linear regression there is only one critical point being the local minimum so you don't have to worry about minimising the cost function to a value that isn't the local maximum.\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j9G_CFl5MBRd",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Vectorization\n",
+        "Please note that we will only do vectorized implementation of these algorithms as it is easier to read and is more efficient.\n",
+        "\n",
+        "What I mean by vectorization is that instead of implementing the above as two seperate parrallel while loops I simply just use matricies instead.\n",
+        "\n",
+        "i.e. $h_{\\theta}(x)= \n",
+        "\\begin{pmatrix}\n",
+        "1 &x_0  \\\\\n",
+        "1&x_1\n",
+        "\\end{pmatrix}^T\n",
+        "\\begin{pmatrix}\n",
+        "\\theta_0  \\\\\n",
+        "\\theta_1\n",
+        "\\end{pmatrix}$"
       ]
     },
     {
@@ -663,7 +660,7 @@
         "# Initially we'll make the theta values zero\n",
         "theta = np.zeros((2,1))\n"
       ],
-      "execution_count": 284,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +685,7 @@
       "source": [
         "costFunction(X, Y, theta)"
       ],
-      "execution_count": 285,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,14 +740,9 @@
         "\n",
         "    for iter in range(num_Iterations):\n",
         "      predicted_y_values = X.dot(theta)\n",
-        "      #print(np.shape(predicted_y_values), predicted_y_values)\n",
-        "      #print(predicted_y_values, np.shape(predicted_y_values))\n",
         "      sum_of_error = np.matmul((predicted_y_values.transpose() - y), X).transpose()\n",
-        "      #print(\"Shape of sum error: \", np.shape(sum_of_error))\n",
-        "      #print(\"Theta is: \", theta, np.shape(theta))\n",
         "      \n",
         "      theta_change = alpha*(1/m)*sum_of_error\n",
-        "      #print(\"Theta change values: \", theta_change)\n",
         "      theta += -theta_change\n",
         "      J_values.append(costFunction(X, y, theta))\n",
         "    \n",
@@ -780,11 +772,11 @@
       "metadata": {
         "id": "-U486nyHozze",
         "colab_type": "code",
+        "outputId": "f50be16e-e259-40e1-9329-19ec62d9f7f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 339
-        },
-        "outputId": "f50be16e-e259-40e1-9329-19ec62d9f7f2"
+        }
       },
       "source": [
         "# Eyeballing the plot\n",
@@ -802,7 +794,7 @@
         "plt.plot(data_x, data_y, \"bo\")\n",
         "plt.show()"
       ],
-      "execution_count": 288,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
