While loops added to workshop 2

--- a/PythonIntroduction/Workshop2.ipynb
+++ b/PythonIntroduction/Workshop2.ipynb
@@ -584,11 +584,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While loops also allow us to perform iteration, however in a different way as seen in the for loop. A while statement will continue to execute a single statement or group of statements as long as a specified condition is true. The general format of a while loop is:\n",
+    "\n",
+    "while condition:\n",
+    "    code statements\n",
+    "else:\n",
+    "    final code statements\n",
+    "    \n",
+    "This is slightly different to other languages, there is also no other loops in python other than for and while.\n",
+    "\n",
+    "Let's now have a look at some examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is curently: 0\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 1\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 2\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 3\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 4\n",
+      "x is still less than 10, adding 1 to x\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "\n",
+    "while x<5:\n",
+    "    print(\"x is curently:\", x)\n",
+    "    print(\"x is still less than 10, adding 1 to x\")\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is curently: 0\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 1\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 2\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 3\n",
+      "x is still less than 10, adding 1 to x\n",
+      "x is curently: 4\n",
+      "x is still less than 10, adding 1 to x\n",
+      "All Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "\n",
+    "while x<5:\n",
+    "    print(\"x is curently:\", x)\n",
+    "    print(\"x is still less than 10, adding 1 to x\")\n",
+    "    x+=1\n",
+    "else:\n",
+    "    print(\"All Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### break, continue pass ###\n",
+    "\n",
+    "We can use break, continue, and pass statements in our loops to add additional functionality. However, if done wrong this can lead to very unreadable code and make it very hard to debug. For this reason it will be shown that these exist and how they work but it is recommended that these not be used.\n",
+    "\n",
+    "break: Breaks out of the current closest enclosing loop.\n",
+    "continue: Goes to the top of the closest enclosing loop.\n",
+    "pass: Does nothing at all\n",
+    "\n",
+    "An example of these:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is currently:  0\n",
+      " x is still less than 10, adding 1 to x\n",
+      "continuing!!!\n",
+      "x is currently:  1\n",
+      " x is still less than 10, adding 1 to x\n",
+      "x==2\n",
+      "x is currently:  2\n",
+      " x is still less than 10, adding 1 to x\n",
+      "continuing!!!\n",
+      "x is currently:  3\n",
+      " x is still less than 10, adding 1 to x\n",
+      "continuing!!!\n",
+      "x is currently:  4\n",
+      " x is still less than 10, adding 1 to x\n",
+      "continuing!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "\n",
+    "while x < 5:\n",
+    "    print(\"x is currently: \",x)\n",
+    "    print(\" x is still less than 10, adding 1 to x\")\n",
+    "    x+=1\n",
+    "    if x==2:\n",
+    "        print(\"x==2\")\n",
+    "    else:\n",
+    "        print(\"continuing!!!\")\n",
+    "        continue\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is currently:  0\n",
+      " x is still less than 10, adding 1 to x\n",
+      "continuing...\n",
+      "x is currently:  1\n",
+      " x is still less than 10, adding 1 to x\n",
+      "continuing...\n",
+      "x is currently:  2\n",
+      " x is still less than 10, adding 1 to x\n",
+      "x==3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "\n",
+    "while x < 10:\n",
+    "    print('x is currently: ',x)\n",
+    "    print(' x is still less than 10, adding 1 to x')\n",
+    "    x+=1\n",
+    "    if x==3:\n",
+    "        print('x==3')\n",
+    "        break\n",
+    "    else:\n",
+    "        print('continuing...')\n",
+    "        continue\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note: It is possible to create infinitely running loops with while statements ####"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#DO NOT RUN THIS CODE!!!!\n",
+    "while True:\n",
+    "    printf(\"Repeating forever!!!\")"
+   ]
   }
  ],
  "metadata": {
